# All_Projects

./: README.md
C++/Algorithms/AlgContest_1/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp  TaskG.cpp  TaskH.cpp  TaskI.cpp
C++/Algorithms/AlgContest_2/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp  TaskG.cpp  TaskH.cpp  TaskK.cpp  TaskM.cpp  main.cpp
C++/Algorithms/AlgContest_3/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskG.cpp  main.cpp
C++/Algorithms/AlgContest_4/: .clang-format  CMakeLists.txt  TaskA.cpp  TaskB.cpp  main.cpp
C++/Algorithms/AlgContest_6/: CMakeLists.txt  Matrix_min.cpp  TaskA.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskG.cpp  TaskH.cpp  TaskI.cpp  TaskJ.cpp  TaskK.cpp  TaskL.cpp  TaskM.cpp  TaskO.cpp  TaskP.cpp  TaskQ.cpp  TaskS.cpp  TaskT.cpp  main.cpp
C++/Algorithms/AlgContest_7/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskF.cpp  TaskG.cpp  TaskH.cpp  TaskI.cpp  TaskJ.cpp  main.cpp
C++/Algorithms/AlgContest_8/: CMakeLists.txt  TaskA.cpp  TaskB.cpp  TaskJ.cpp
C++/C++Contest/: CMakeLists.txt  TaskAA.cpp  TaskAAA.cpp  biginteger.h  deque.cpp  deque.h  geometry.h  list.cpp  list.h  main.cpp  string.cpp
C++/C++Subject/: CMakeLists.txt  biginteger.cpp  deque.cpp  deque.h  geometry.cpp  smart_pointers.h  stackallocator.cpp  stackallocator.h  string.h
Python/PythonProject1/: graphic_editor.py
Python/TextGame/: README.MD  cell.py  character.py  field.py  game.py  graphic.py  static.py
