cmake_minimum_required(VERSION 3.26)
project(AlgContest_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(AlgContest_2 main.cpp)
add_executable(TaskA TaskA.cpp)
add_executable(TaskB TaskB.cpp)
add_executable(TaskC TaskC.cpp)
add_executable(TaskD TaskD.cpp)
add_executable(TaskE TaskE.cpp)
add_executable(TaskF TaskF.cpp)
add_executable(TaskG TaskG.cpp)
add_executable(TaskH TaskH.cpp)
add_executable(TaskK TaskK.cpp)
add_executable(TaskM TaskM.cpp)
