cmake_minimum_required(VERSION 3.26)
project(AlgContest_3)

set(CMAKE_CXX_STANDARD 20)

add_executable(main main.cpp)
add_executable(TaskA TaskA.cpp)
add_executable(TaskB TaskB.cpp)
add_executable(TaskC TaskC.cpp)
add_executable(TaskD TaskD.cpp)
add_executable(TaskE TaskE.cpp)
add_executable(TaskG TaskG.cpp)
